data/collection/fixes/descriptions/scala/scala-8449
```
  ~/code/scala $(scalac-hash -h v2.10.4)/bin/scaladoc sandbox/{Test.java,Client.scala}
warning: dropping dependency on node with no phase object: pickler
model contains 3 documentable templates
sandbox/Test.java:2: error: trait Function1 takes type parameters
	public scala.Function1 foo() { return null; }
                     ^
one error found
  ~/code/scala $(scalac-hash -h v2.11.0-RC3)/bin/scaladoc sandbox/{Test.java,Client.scala}
model contains 3 documentable templates
sandbox/Test.java:2: error: trait Function1 takes type parameters
	public scala.Function1 foo() { return null; }
                     ^
one error found
  ~/code/scala $(scalac-hash -h v2.11.0-RC3)/bin/scalac sandbox/{Test.java,Client.scala}
  ~/code/scala tail sandbox/{Test.java,Client.scala}
==> sandbox/Test.java <==
public class Test {
	public scala.Function1 foo() { return null; }
}

==> sandbox/Client.scala <==
object Client {
  def foo: Test = ???
}
```